tests/base/invalid/ListAppend_Invalid_1.whiley


int f([string] r):
    return |r|
 
void ::main(System.Console sys):
    r = args + [1]
    f(r)
    sys.out.println(Any.toString(r))
